--- a/Library_System/src/main/java/com/alejandro/library_system/FrmSubGeneroLiterario.form
+++ b/Library_System/src/main/java/com/alejandro/library_system/FrmSubGeneroLiterario.form
@@ -166,6 +166,7 @@
           </Properties>
           <Events>
             <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="TblSubGeneroMouseClicked"/>
+            <EventHandler event="keyReleased" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="TblSubGeneroKeyReleased"/>
           </Events>
         </Component>
       </SubComponents>
