Redirecciones de Botones

--- a/Library_System/src/main/java/com/alejandro/library_system/FrmMenu.form
+++ b/Library_System/src/main/java/com/alejandro/library_system/FrmMenu.form
@@ -71,22 +71,15 @@
               <Group type="102" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="btnPrestamo" min="-2" pref="186" max="-2" attributes="0"/>
-                          <EmptySpace pref="554" max="32767" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="btnAgregarLibro" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
-                              <Component id="btnVentas" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
-                              <Component id="btnLector" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
-                              <Component id="btnEditoriales" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
-                              <Component id="btnClientes" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
-                              <Component id="btnCompra" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
-                          </Group>
-                          <EmptySpace max="32767" attributes="0"/>
-                      </Group>
+                      <Component id="btnPrestamo" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
+                      <Component id="btnAgregarLibro" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
+                      <Component id="btnVentas" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
+                      <Component id="btnLector" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
+                      <Component id="btnEditoriales" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
+                      <Component id="btnClientes" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
+                      <Component id="btnCompra" alignment="0" min="-2" pref="186" max="-2" attributes="0"/>
                   </Group>
+                  <EmptySpace pref="625" max="32767" attributes="0"/>
               </Group>
               <Component id="jPanel2" alignment="0" max="32767" attributes="0"/>
           </Group>
@@ -119,6 +112,9 @@
       <SubComponents>
         <Component class="javax.swing.JButton" name="BtnCerrarSesion">
           <Properties>
+            <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+              <Color blue="66" green="66" red="0" type="rgb"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Cerrar Sesion"/>
           </Properties>
           <Events>
@@ -139,11 +135,17 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Editoriales"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEditorialesActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnClientes">
           <Properties>
             <Property name="text" type="java.lang.String" value="Clientes"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnClientesActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnVentas">
           <Properties>
@@ -154,6 +156,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Lector"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnLectorActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="btnPrestamo">
           <Properties>
